--- a/Components/CPP/rtc.conf
+++ b/Components/CPP/rtc.conf
@@ -3,6 +3,6 @@ naming.formats: %n.rtc
 logger.enable: NO
 exec_cxt.periodic.rate: 1000
 manager.modules.load_path: .
-manager.modules.preload: Crawl_Gait_Controller.dll, Foot_Position_Controller.dll, Four_legged_Robot_Simulator.dll, Intermittent_Crawl_Gait_Controller.dll, RTnoProxy.dll
-manager.components.precreate: Crawl_Gait_Controller, Foot_Position_Controller, Four_legged_Robot_Simulator, Intermittent_Crawl_Gait_Controller, RTnoProxy
+manager.modules.preload: Crawl_Gait_Controller.dll, Foot_Position_Controller.dll, Four_legged_Robot_Simulator.dll, Intermittent_Crawl_Gait_Controller.dll, Trot_Gait_Controller.dll, RTnoProxy.dll
+manager.components.precreate: Crawl_Gait_Controller, Foot_Position_Controller, Four_legged_Robot_Simulator, Intermittent_Crawl_Gait_Controller, Trot_Gait_Controller, RTnoProxy
 Test.RTnoProxy.config_file: RTnoProxy.conf
